force-app/main/default/objects/BrandMakes__c/BrandMakes__c.object-meta.xml
<CustomObject>
    <description>This table defines the lookup for which Makes are available for a Brand</description>
    <label>Brand Make</label>
    <nameField>
        <displayFormat>BRMK{000}</displayFormat>
        <label>Brand Make Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Makes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>