force-app/main/default/objects/BrandMakes__c/fields/Activator_BrandMakeId__c.field-meta.xml
<CustomField>
    <fullName>Activator_BrandMakeId__c</fullName>
    <externalId>true</externalId>
    <label>Activator BrandMake Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>