force-app/main/default/objects/BrandMakes__c/fields/Activator_MakeId__c.field-meta.xml
<CustomField>
    <fullName>Activator_MakeId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id of the Make Id in the Activator System</inlineHelpText>
    <label>Activator Make Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>