force-app/main/default/objects/BrandMakes__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Brand associated with the related Make</inlineHelpText>
    <label>Brand</label>
    <referenceTo>Brands__c</referenceTo>
    <relationshipLabel>Makes</relationshipLabel>
    <relationshipName>Brand_Makes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>