force-app/main/default/objects/BrandMakes__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Make associated with the related Brand record</inlineHelpText>
    <label>Make</label>
    <referenceTo>Makes__c</referenceTo>
    <relationshipLabel>Brands</relationshipLabel>
    <relationshipName>Brand_Makes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>